# course_work_oop

./: .env_example  .gitignore  README.md  main.py  pyproject.toml  settings.py
src/: func_utils.py  work_api.py  work_data.py  work_vacancy.py
