[tool.poetry]
name = "course-work-oop"
version = "0.1.0"
description = ""
authors = ["Sergey Shershikov <ssher250110@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
